ver 0.20.23 (not yet released)
* new clang crash bug workaround

ver 0.20.22 (2018/10/23)
* protocol
  - add tag fallbacks for AlbumArtistSort, ArtistSort
  - fix empty string filter on fallback tags
  - "count group ..." can print an empty group
  - fix broken command "list ... group"
* storage
  - curl: URL-encode paths
* decoder
  - fluidsynth: adapt to API change in version 2.0
* Android
  - now runs as a service
  - add button to start/stop MPD
  - add option to auto-start on boot
* work around clang bug leading to crash
* install the SVG icon

ver 0.20.21 (2018/08/17)
* database
  - proxy: add "password" setting
  - proxy: support tags "ArtistSort", "AlbumArtistSort", "AlbumSort"
  - simple: allow .mpdignore comments only at start of line
* output
  - httpd: remove broken DLNA support code
* playlist
  - cue: support file type declaration "FLAC" (non-standard)
* URI schemes are case insensitive
* Android, Windows
  - enable the "curl" storage plugin

ver 0.20.20 (2018/05/22)
* protocol
  - fix "modified-since" filter regression
* output
  - pulse: cork stream when paused due to "single" mode
* decoder
  - dsdiff, dsf: support more MIME types
  - dsdiff, dsf: allow 4 MB ID3 tags
  - opus: support R128_ALBUM_GAIN tag
* Android, Windows
  - enable the "proxy" database plugin

ver 0.20.19 (2018/04/26)
* protocol
  - validate absolute seek time, reject negative values
* database
  - proxy: fix "search already in progress" errors
  - proxy: implement "list ... group"
* input
  - mms: fix lockup bug and a crash bug
* decoder
  - ffmpeg: fix av_register_all() deprecation warning (FFmpeg 4.0)
* player
  - fix spurious "Not seekable" error when switching radio streams
* macOS: fix crash bug

ver 0.20.18 (2018/02/24)
* input
  - curl: allow authentication methods other than "Basic"
* decoder
  - flac: improve seeking precision
* fix gapless CUE song transitions
* Android, Windows
  - enable the NFS storage plugin

ver 0.20.17 (2018/02/11)
* output