@@ -1,4 +1,6 @@
 ver 0.20.23 (not yet released)
+* protocol
+  - emit "player" idle event when restarting the current song
 * new clang crash bug workaround
 
 ver 0.20.22 (2018/10/23)
